# Bus-Sathi

./: .gitignore  README.md
admin/: package-lock.json  package.json
admin/src/: App.css  App.tsx  index.css
admin/src/api/: client.ts
admin/src/components/: Layout.tsx
admin/src/context/: AuthContext.tsx
admin/src/pages/: BusesPage.tsx  DashboardPage.tsx  DriversPage.tsx  LiveMonitorPage.tsx  LoginPage.tsx  PassesPage.tsx  RoutesPage.tsx  TicketsPage.tsx  TrackingKeysPage.tsx  TripAssignmentsPage.tsx  UsersPage.tsx
backend/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  buses.py  fleet.py  passes.py  tickets.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: bus.py  depot.py  driver.py  pass_.py  route.py  ticket.py  tracking_api_key.py  trip_assignment.py  user.py
backend/app/schemas/: bus.py  fleet.py  pass_.py  ticket.py  user.py
backend/app/services/: auth.py  bus_tracking.py  fare_engine.py  fleet.py  pass_.py  ticket.py
backend/scripts/: seed_test_buses.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_buses.py  test_health.py  test_tickets.py
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: dev-mobile.sh  forward-api-port.ps1  setup-adb.sh
(+58 files in other folders)
